# scrape-and-ntfy

./: .gitignore  Dockerfile  LICENSE  README.md  config.example.toml  docker-compose.yml  pyproject.toml  test.html
src/scrape_and_ntfy/: __main__.py
src/scrape_and_ntfy/scraping/: __init__.py  notifier.py  scraper.py
src/scrape_and_ntfy/utils/: __init__.py  cli_args.py  db.py  logging.py  utils.py
