[project]
name = "scrape-and-ntfy"
version = "0.1.0"
description = "Notify when an HTML element on a page changes"
authors = [
    {name = "slashtechno", email = "77907286+slashtechno@users.noreply.github.com"},
    {name = "mikeymoo5", email = "53538532+Mikeymoo5@users.noreply.github.com"}
]
dependencies = [
    "dataset>=1.6.2",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "selenium>=4.21.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
scrape-and-ntfy = "scrape_and_ntfy.__main__:main"

[tool.pdm]
distribution = true
