[project]
name = "scrape-and-ntfy"
version = "0.1.1"
description = "An extremely customizable web scraper with a modular notification system and persistent storage via SQLite."
authors = [
    {name = "slashtechno", email = "77907286+slashtechno@users.noreply.github.com"},
    {name = "mikeymoo5", email = "53538532+Mikeymoo5@users.noreply.github.com"}
]
dependencies = [
    "dataset>=1.6.2",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "selenium>=4.21.0",
    "httpx>=0.27.0",
    "toml>=0.10.2",
]
requires-python = ">=3.11"
readme = "README.md"
# license = {text = "MIT"}
classifiers = [
"License :: OSI Approved :: MIT License",
"Programming Language :: Python",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
scrape-and-ntfy = "scrape_and_ntfy.__main__:main"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.4.8",
]
